# HBreakout

./: .gitignore  Ball.cpp  Ball.hpp  BasicDTMenager.hpp  Bounds.cpp  Bounds.hpp  Brick.cpp  Brick.hpp  CMakeLists.txt  CollisionTester.cpp  CollisionTester.hpp  FPSWidget.cpp  FPSWidget.hpp  FT_to_SDL_helpers.cpp  FT_to_SDL_helpers.hpp  FontCache.cpp  FontCache.hpp  FontGlyph.cpp  FontGlyph.hpp  FontMenager.cpp  FontMenager.hpp  Game.cpp  Game.hpp  GameInterfaces.cpp  GameInterfaces.hpp  LICENSE  Paddle.cpp  Paddle.hpp  README.md  SDL_helpers.cpp  SDL_helpers.hpp  SDL_memory.hpp  StaticSquareCollider.cpp  StaticSquareCollider.hpp  TimeMenager.cpp  TimeMenager.hpp  VecCoords.hpp  Vector.hpp  WIN_TimeMenager.cpp  WIN_TimeMenager.hpp  (+6 more)
main_folder/images/: Thumbs.db
